--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/Echo-BotDev/Major-Bot-Sniper/issues"
   },
-  "homepage": "https://github.com/Echo-BotDev/Major-Bot-Sniper#readme"
+  "homepage": "https://github.com/Echo-BotDev/Major-Bot-Sniper#readme",
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "discord.js": "^11.5.1",
+    "figlet": "^1.5.2",
+    "gradient-string": "^1.2.0"
+  }
 }
