--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "token": "ODQxODY5NTYxNDQ0MDQwNzI0.YTR1vg.emSjeEfRsPSh3TvhwLMFIfannSg",
+    "token": "",
     "prefix": ".",
     "disabledEvents": [
         "CHANNEL_CREATE",
